<resources>
    <string name="app_name">GoalIdeaTracker</string>
    <string name="goal_Id">GoalId</string>
    <string name="action_settings">Settings</string>
    <string name="add_goalName">Enter Goal Name Here</string>
    <string name="goal_name">Enter Goal Name Here</string>
    <string name="goal_title_toolbar">Add Goal</string>
    <string name="goal_edit_title_toolbar">Edit Goal</string>
    <string name="home_title_toolbar">All Goals</string>
    <string name="goal_done_icon">done</string>
    <string name="goal_title_hint">Enter Goal Here</string>
    <string name="add_goal_title">What is your goal?</string>
    <string name="goal_reason_title">Why do you want to achieve this goal?</string>
    <string name="goal_priority_title">When do you want to achieve this goal?</string>
    <string name="goal_category_title">What type of goal is this?</string>
    <string name="goal_reason_hint">Enter Reason Here</string>
    <string name="db_parent_Goals">Goals</string>
    <string name="db_Goal_Name">name</string>
    <string name="db_Goal_Reason">reason</string>
    <string name="db_Goal_Time">time</string>
    <string name="db_Goal_Priority">priority</string>
    <string name="db_Goal_Type">type</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>



    <string-array name="priority">
        <item>Immediately</item>
        <item>Short Term</item>
        <item>Long Term</item>recycler

    </string-array>


    <string-array name="category">
        <item>Career</item>
        <item>Financial</item>
        <item>Personal Development</item>
        <item>Spiritual</item>
        <item>Educational</item>
        <item>Relationship</item>
        <item>Health and Wellbeing</item>

    </string-array>
</resources>
