<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jasmine.goalideatracker.AddGoal">





    <TextView
        android:id="@+id/addGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_goal_title"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:cursorVisible="true"
        android:hint="@string/goal_title_hint"
        android:singleLine="true"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"/>




    <TextView
        android:id="@+id/addReasonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/goal_reason_title"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:cursorVisible="true"
        android:hint="@string/goal_reason_hint"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"/>


    <TextView
        android:id="@+id/goalPriorityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/goal_priority_title"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:tooltipText="Priority" />

    <TextView
        android:id="@+id/goalTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/goal_category_title"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:tooltipText="Priority" />


</LinearLayout>
